Fix flex wrap on brand component

--- a/src/components/brand/brand.css
+++ b/src/components/brand/brand.css
@@ -3,11 +3,13 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  flex: 1;
 }
 
 .gpt3__brand div {
   flex: 1;
   max-width: 120px;
+  min-width: 100px;
   margin: 1.5rem;
   display: flex;
   justify-content: center; 
